k8s/base/kube-system/cilium/gateway-api/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-external
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.kubernetes.io/target: qgr1-external-gateway.kutara.io
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.45.0.43
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.kutara.io"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.kutara.io"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kutara-wildcard-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-internal
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.45.0.80
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.qgr1.rabbito.tech"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.qgr1.rabbito.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - name: qgr1-rabbito-wildcard-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: kube-system
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: cilium-external
      namespace: kube-system
      sectionName: http
    - name: cilium-internal
      namespace: kube-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
